<resources>
    <string name="app_name">WhatHappensNext</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgotPwd">Forgot Password/ Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo">TODO</string>
</resources>
